--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -7,6 +7,8 @@
   height: 100%;
 }
 .splide {
+  height: calc(100vh - 100px);
+  width: 100%;
   position: relative;
   overflow: hidden;
   user-select: none;
@@ -17,21 +19,15 @@
   position: absolute;
   left: 0;
   top: 0;
+  width: max-content;
   transition: translate 0.3s linear;
 }
 .slide {
   position: relative;
   width: 100vw;
-  height: 100%;
-  background-color: green;
+  height: calc(100vh - 100px);
 }
 
-.slide:nth-child(2) {
-  background-color: aqua;
-}
-.slide:nth-child(3) {
-  background-color: purple;
-}
 .arrows {
   position: absolute;
   inset: 0px;
@@ -49,7 +45,28 @@
   border: none;
   cursor: pointer;
 }
-
+.pagenations {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 40;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding-block: 16px;
+}
+.pagenationDot {
+  background-color: rgb(255, 255, 255, 0.3);
+  border-radius: 100%;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+}
+.pagenationDot[data-active="true"] {
+  background-color: rgb(var(--primary), 0.8);
+}
 @media (min-width: 768px) {
   .slide {
     height: calc(100vh - 148px);
